--- a/grc338/website-content-hierarchy/index.html
+++ b/grc338/website-content-hierarchy/index.html
@@ -26,11 +26,13 @@
                 </ul>
             </nav> 
         </header>
-        <p class="slogan">Every business has a nice slogan. Ours is coming soon.</p>
-        <address>
-            123 Happy Ave, San Luis Obispo, California<br>
-            805-756-1108
-        </address>
+        <main>
+            <p class="slogan">Every business has a nice slogan. Ours is coming soon.</p>
+            <address>
+                123 Happy Ave, San Luis Obispo, California<br>
+                805-756-1108
+            </address>
+        </main>
         <footer>
             <p>© All rights reserved. The Restaurant, 2024.</p>
         </footer>
