--- a/grc338/website-content-hierarchy/contact.html
+++ b/grc338/website-content-hierarchy/contact.html
@@ -7,7 +7,7 @@
         <meta http-equiv="Pragma" content="no-cache" />
         <meta http-equiv="Expires" content="0" />
         <link rel="stylesheet" type="text/css" href="style.css">
-        <title>Contact</title>
+        <title>Contact Us</title>
     </head> 
     <body>
         <header>
@@ -26,25 +26,27 @@
                 </ul>
             </nav> 
         </header>
-        <img src="images/placeholder.jpg" alt="" />
-        <address>
-            123 Happy Ave, San Luis Obispo, California<br>
-            805-756-1108
-        </address>
-        <h2>Hours</h2>
-        <ul>
-            <li>
-                <p>Tuesday–Friday: 0:00–0:00</p>
-            </li>
-            <li>
-                <p>Saturday–Sunday: 0:00–0:00</p>
-            </li>
-            <li>
-                <p>
-                    Closed on Mondays
-                </p>
-            </li>
-        </ul>
+        <main>
+            <img src="images/placeholder.jpg" alt="" />
+            <address>
+                123 Happy Ave, San Luis Obispo, California<br>
+                805-756-1108
+            </address>
+            <h2>Hours</h2>
+            <ul>
+                <li>
+                    <p>Tuesday–Friday: 0:00–0:00</p>
+                </li>
+                <li>
+                    <p>Saturday–Sunday: 0:00–0:00</p>
+                </li>
+                <li>
+                    <p>
+                        Closed on Mondays
+                    </p>
+                </li>
+            </ul>
+        </main>
         <footer>
             <p>© All rights reserved. The Restaurant, 2024.</p>
         </footer>
