--- a/grc338/web-mobile-first/contact.html
+++ b/grc338/web-mobile-first/contact.html
@@ -7,8 +7,8 @@
         <meta http-equiv="Pragma" content="no-cache" />
         <meta http-equiv="Expires" content="0" />
         <link rel="stylesheet" type="text/css" href="style.css">
-        <title>Home</title>
-    </head>
+        <title>Contact Us</title>
+    </head> 
     <body>
         <header>
             <nav>
@@ -27,11 +27,25 @@
             </nav> 
         </header>
         <main>
-            <p class="slogan">Every business has a nice slogan. Ours is coming soon.</p>
+            <img src="images/placeholder.jpg" alt="" />
             <address>
                 123 Happy Ave, San Luis Obispo, California<br>
                 805-756-1108
             </address>
+            <h2>Hours</h2>
+            <ul>
+                <li>
+                    <p>Tuesday–Friday: 0:00–0:00</p>
+                </li>
+                <li>
+                    <p>Saturday–Sunday: 0:00–0:00</p>
+                </li>
+                <li>
+                    <p>
+                        Closed on Mondays
+                    </p>
+                </li>
+            </ul>
         </main>
         <footer>
             <p>© All rights reserved. The Restaurant, 2024.</p>
