Responsive layout added for wider screens

--- a/grc339/digital-magazine/index.html
+++ b/grc339/digital-magazine/index.html
@@ -14,7 +14,7 @@
         </head>	
 
         <body>
-            <div class="container">
+            <div class="home-container">
                 
                 <!-- header is outside the main, but inside the div container. -->
                 <header>
@@ -103,6 +103,8 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore maggna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </a>
                     </section>
+                </main>
+                <aside>
                     <section class="tertiary"> <!-- Teaser for a tertiary story, with no images. You want to give it a third class. -->
                         <a href="#">
                             <!-- Include the heading (h2, yes h2 again, you can style it different in CSS if you give your section with secondary stories a different class) and filler text (p) for the main story. -->
@@ -147,7 +149,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </a>
                     </section>
-                </main>
+                </aside>
 
                 <!-- footer is outside the main, but inside the div container. -->
                 <footer>
