Digital Magazine Visual Language

--- a/grc339/digital-magazine/index.html
+++ b/grc339/digital-magazine/index.html
@@ -3,6 +3,7 @@
         <head>
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1" /> <!-- You need this to proper scale in actual mobile devices.-->
+            <link rel="stylesheet" href="https://use.typekit.net/vkf8nxw.css">
             <link rel="stylesheet" href="style.css">
             <title>Edrick Wong-Liang</title> <!-- This will be replaced with the actual name of the publication later.  -->
 
@@ -20,15 +21,15 @@
                 <header>
                     <h1>
                         <a href="index.html">
-                            <img src="logo.svg" alt="Logo" />
+                            <img src="Assets/CantonMambo-logo.svg" alt="Logo" />
                         </a>
                     </h1>
                     <nav>
                         <ul>
-                            <li><a href="#">Style</a></li>
-                            <li><a href="#">Music</a></li>
-                            <li><a href="#">Wellbeing</a></li>
-                            <li><a href="#">Sports</a></li>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Rhythm & Roots</a></li>
+                            <li><a href="#">East Asia Now</a></li>
+                            <li><a href="#">Spotlights</a></li>
                             <li><a href="#">Opinion</a></li>
                         </ul>
                     </nav>
@@ -40,67 +41,56 @@
                         <a href="mainstory.html">
                             <!-- Here, you’ll include an image in an img element, that will be inside a figure element. You don’t need a caption, but include an empty alt attribute. -->
                             <figure>
-                                <img src="soccer-1.jpg" alt="" />
+                                <img src="Assets/giafu-main.jpeg" alt="" />
                             </figure>
                             <!-- Include the heading (h2) and filler text (p) for the main story. -->
-                            <h2>Story about soccer</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore maggna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h2>Gia Fu Traces the Cross-Cultural Rhythms of Salsa Music</h2>
+                            <p>Salsa music has opened the world up to musician and DJ Gia Fu. More people know about Fu in New York City than in her hometown of Hong Kong. More of Fu’s social media followers speak Spanish and English than Cantonese or Mandarin. And before she began filling venues in Hong Kong with her unique and enchanting vinyl mixes that “bridge cultural gaps and celebrate diversity through Salsa, Afro-Latin music, and Asian sounds” under her series “Canton Mambo,” Fu was already a global bonafide star in the world of Latin music.</p>
                         </a>    
                     </section>
                     <section class="secondary"> <!-- Teaser for a secondary story, with images. You want to give it a different class. -->
                         <a href="#">
-                            <!-- Here, you’ll include an image in an img element, that will be inside a figure element. You don’t need a caption, but include an empty alt attribute. -->
                             <figure>
-                                <img src="dance-1.jpg" alt="" />
+                                <img src="Assets/wkw.jpg" alt="" />
                             </figure>
-                            <!-- Include the heading (h2, yes h2 again, you can style it different in CSS if you give your section with secondary stories a different class) and filler text (p) for the main story. -->
-                            <h2>Story about dance</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore maggna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h2>Wong Kar-wai: In the Mood for Love and the Allure of Latin Sounds</h2>
+                            <p>Director Wong Kar-wai reveals how the rhythms of 1960s Hong Kong and the influence of Latin sounds infuse his acclaimed film with longing and nostalgia. Explore how tradition, gossip, and music come together in this intimate portrait of love and restraint.</p>
                         </a>
                     </section>
-                    <!-- You will need to replicate the section above to have a total of five secondary stories. Include their images and filler content. -->
-                    <section class="secondary"> <!-- Teaser for a secondary story, with images. You want to give it a different class. -->
+                    <section class="secondary">
                         <a href="#">
-                            <!-- Here, you’ll include an image in an img element, that will be inside a figure element. You don’t need a caption, but include an empty alt attribute. -->
                             <figure>
-                                <img src="coffee-1.jpg" alt="" />
+                                <img src="Assets/record.jpg" alt="" />
                             </figure>
-                            <!-- Include the heading (h2, yes h2 again, you can style it different in CSS if you give your section with secondary stories a different class) and filler text (p) for the main story. -->
-                            <h2>Story about coffee</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore maggna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h2>Dancing Through the Decades</h2>
+                            <p>From 1960s cha-cha to today's salsa pop-ups, follow the evolution of Latin rhythms in the global youth scene. We trace how each decade brought new styles, from disco-infused rumbas to modern K-pop collaborations, and talk to cultureal historians about what keeps these rhythms alive.</p>
                         </a>
                     </section>
-                    <section class="secondary"> <!-- Teaser for a secondary story, with images. You want to give it a different class. -->
+                    <section class="secondary">
                         <a href="#">
-                            <!-- Here, you’ll include an image in an img element, that will be inside a figure element. You don’t need a caption, but include an empty alt attribute. -->
                             <figure>
-                                <img src="trees-1.jpg" alt="" />
+                                <img src="Assets/joao.jpg" alt="" />
                             </figure>
-                            <!-- Include the heading (h2, yes h2 again, you can style it different in CSS if you give your section with secondary stories a different class) and filler text (p) for the main story. -->
-                            <h2>Story about dance</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore maggna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h2>João Gilberto: How the Bossa Nova King Took Japan to His Heart</h2>
+                            <p>When legendary Brazilian guitarist João Gilberto first visited Tokyo in the late 1980s, few could have predicted the profound impact he'd have on Japan's jazz and pop scenes. His delicate guitar rhythms and understated vocals resonated deeply with Japanese audiences, inspiring a wave of bossa nova cafés and passionate cover bands.</p>
                         </a>
                     </section>
-                    <section class="secondary"> <!-- Teaser for a secondary story, with images. You want to give it a different class. -->
+                    <section class="secondary">
                         <a href="#">
-                            <!-- Here, you’ll include an image in an img element, that will be inside a figure element. You don’t need a caption, but include an empty alt attribute. -->
                             <figure>
-                                <img src="guitars-1.jpg" alt="" />
+                                <img src="Assets/lisa.jpeg" alt="" />
                             </figure>
-                            <!-- Include the heading (h2, yes h2 again, you can style it different in CSS if you give your section with secondary stories a different class) and filler text (p) for the main story. -->
-                            <h2>Story about guitars</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore maggna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h2>Lisa Ono: The Voice Bridging Brazil and Asia</h2>
+                            <p>Lisa Ono's warm vocals and breezy bossa nova interpretations have made her a household name across Asia and beyond. Born in Brazil and raised in Japan, Lisa mastered the art of musical fusion from an early age. In this feature, we explore her most beloved albums, her collaborations with artists across continents, and how she became an ambassador for Latin music in the East.</p>
                         </a>
                     </section>
-                    <section class="secondary"> <!-- Teaser for a secondary story, with images. You want to give it a different class. -->
+                    <section class="secondary">
                         <a href="#">
-                            <!-- Here, you’ll include an image in an img element, that will be inside a figure element. You don’t need a caption, but include an empty alt attribute. -->
                             <figure>
-                                <img src="cars-1.jpg" alt="" />
+                                <img src="Assets/mess.jpg" alt="" />
                             </figure>
-                            <!-- Include the heading (h2, yes h2 again, you can style it different in CSS if you give your section with secondary stories a different class) and filler text (p) for the main story. -->
-                            <h2>Story about cars</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore maggna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h2>Soundtrack to a Neon City: Latin music in East Asian Cinema</h2>
+                            <p>How directors and composers use Latin music to evoke nostalgia, longing, and excitement in iconic film scenes. In this feature, we journey through movies from Hong Kong and Tokyo, exploring how carefully chosen tracks create unforgettable moments. From the frenetic energy of a chase scene to the bittersweet calm of a midnight confession.</p>
                         </a>
                     </section>
                 </main>
@@ -108,8 +98,8 @@
                     <section class="tertiary"> <!-- Teaser for a tertiary story, with no images. You want to give it a third class. -->
                         <a href="#">
                             <!-- Include the heading (h2, yes h2 again, you can style it different in CSS if you give your section with secondary stories a different class) and filler text (p) for the main story. -->
-                            <h2>Story about surfing</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h2>From Macau to Matanzas: A Tale of Two Drums</h2>
+                            <p>Macau’s Portuguese-African past echoes in its percussion traditions—ones that surprisingly resonate with Cuban batá rhythms. Explore how parallel histories collide in unexpected beats.</p>
                         </a>    
                     </section>
                     
@@ -117,36 +107,36 @@
                     <section class="tertiary"> <!-- Teaser for a tertiary story, with no images. You want to give it a third class. -->
                         <a href="#">
                             <!-- Include the heading (h2, yes h2 again, you can style it different in CSS if you give your section with secondary stories a different class) and filler text (p) for the main story. -->
-                            <h2>Story about hiking</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h2>Tokyo’s Vinyl Priestess: DJ Mari’s Latin Devotion</h2>
+                            <p>Raised on enka but baptized in salsa, DJ Mari spins everything from boogaloo to bomba in Tokyo’s underground. Her mission? To build a dance floor that feels like Havana with Shibuya neon.</p>
                         </a>
                     </section>
                     <section class="tertiary"> <!-- Teaser for a tertiary story, with no images. You want to give it a third class. -->
                         <a href="#">
                             <!-- Include the heading (h2, yes h2 again, you can style it different in CSS if you give your section with secondary stories a different class) and filler text (p) for the main story. -->
-                            <h2>Story about flowers</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h2>Echoes in the Body: How Rhythm Travels Without Borders</h2>
+                            <p>Before words, there was the drum. Across oceans and generations, Afro-Latin beats found new expressions in East Asian bodies—through dance, gesture, and instinct. This story explores rhythm as a shared language of movement and memory.</p>
                         </a>
                     </section>
                     <section class="tertiary"> <!-- Teaser for a tertiary story, with no images. You want to give it a third class. -->
                         <a href="#">
                             <!-- Include the heading (h2, yes h2 again, you can style it different in CSS if you give your section with secondary stories a different class) and filler text (p) for the main story. -->
-                            <h2>Story about candles</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h2>Diaspora Frequencies: The Radio Waves That Bridged Worlds</h2>
+                            <p>From dusty AM channels in Havana to late-night broadcasts in Kowloon, the radio carried more than sound—it carried stories. Tune into how Latin music traveled across airwaves and landed in unexpected hearts.</p>
                         </a>
                     </section>
                     <section class="tertiary"> <!-- Teaser for a tertiary story, with no images. You want to give it a third class. -->
                         <a href="#">
                             <!-- Include the heading (h2, yes h2 again, you can style it different in CSS if you give your section with secondary stories a different class) and filler text (p) for the main story. -->
-                            <h2>Story about astronomy</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h2>No Maps Needed</h2>
+                            <p>Some songs don’t come with directions—they just arrive. Through family stereos, mixtapes, and YouTube rabbit holes, this piece unpacks how sound travels through time and lineage without ever asking for permission.</p>
                         </a>
                     </section>
                     <section class="tertiary"> <!-- Teaser for a tertiary story, with no images. You want to give it a third class. -->
                         <a href="#">
                             <!-- Include the heading (h2, yes h2 again, you can style it different in CSS if you give your section with secondary stories a different class) and filler text (p) for the main story. -->
-                            <h2>Story about astrology</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h2>Color Outside the Groove</h2>
+                            <p>Vintage posters, album art, and club flyers once told whole stories in bold blues, deep reds, and gold foil. A look into how design language shaped the atmosphere of a musical era—and why it still moves us.</p>
                         </a>
                     </section>
                 </aside>
