--- a/grc339/digital-magazine/mainstory.html
+++ b/grc339/digital-magazine/mainstory.html
@@ -101,7 +101,7 @@
                               <img src="Assets/record.jpg" alt="" />
                           </figure>
                           <h2>Dancing Through the Decades</h2>
-                          <p>From 1960s cha-cha to today's salsa pop-ups, follow the evolution of Latin rhythms in the global youth scene. We trace how each decade brought new styles, from disco-infused rumbas to modern K-pop collaborations, and talk to cultureal historians about what keeps these rhythms alive.</p>
+                          <p>From 1960s cha-cha to today's salsa pop-ups, follow the evolution of Latin rhythms in the global youth scene. We trace how each decade brought new styles, from disco-infused rumbas to modern K-pop collaborations, and talk to cultural historians about what keeps these rhythms alive.</p>
                         </a>
                       </section>
               
